# opinion_dynamics

./: CMakeLists.txt  README.md
exp_data/: experiments.txt
exp_data/graphs/: email-core.txt
src/: basic_types.cpp  basic_types.h  coloring.cpp  coloring.h  core_periphery.cpp  core_periphery.h  defs.h  dynamics.cpp  dynamics.h  experiments.cpp  experiments.h  graph.cpp  graph.h  main.cpp  random.cpp  random.h  simulation.cpp  simulation.h  union_find.h
